<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_not_sent"
        fontPath="fonts/IRAN Sans Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/no_sent"
        android:textColor="@color/colorbattleshipgrey"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/text_sent_no_active"
        fontPath="fonts/IRAN Sans Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/sent_no_active"
        android:textColor="@color/colorbattleshipgrey"
        android:textSize="@dimen/text_size_16" />


    <TextView
        android:id="@+id/text_active"
        fontPath="fonts/IRAN Sans Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/sent_active"
        android:textColor="@color/colorbattleshipgrey"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/text_sent_reject"
        fontPath="fonts/IRAN Sans Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/sent_doc_err"
        android:textColor="@color/colorbattleshipgrey"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/text_all"
        fontPath="fonts/IRAN Sans Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/all"
        android:textColor="@color/colorbattleshipgrey"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>
