<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_front_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:gravity="center"

                android:text="@string/login_cell_number"
                android:textColor="@color/colorbattleshipgrey"
                android:textSize="@dimen/text_size_16" />


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_front_title"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_error_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="84dp"
                    android:text="@string/login_text_cell_number_"

                    android:textColor="@color/colorbattleshipgrey"
                    android:textSize="@dimen/text_size_12" />

                <EditText
                    android:id="@+id/edit_text_new_phone"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/border_login_number"
                    android:gravity="center"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/text_view_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/login_cell_number_hint"
                    android:textColor="@color/colorbattleshipgrey"
                    android:textSize="@dimen/text_size_12" />

                <Button
                    android:id="@+id/button_no_sim"
                    style="@style/CodeFont"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@drawable/gradient_background"
                    android:text="@string/continue_button" />


                <ProgressBar
                    android:id="@+id/progressbar_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:indeterminateDrawable="@drawable/progress"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
