<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_front_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/otp_text"
                android:textColor="@color/colorbattleshipgrey"
                android:textSize="@dimen/text_size_16" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/text_view_front_title"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="22dp"
                    android:orientation="vertical">

                    <!--<RelativeLayout-->
                        <!--android:id="@+id/relative_resend"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--android:layout_marginBottom="40dp"-->
                        <!--android:visibility="visible">-->


                        <TextView
                            android:id="@+id/text_view_resend"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/otp_text_resend_again"
                            android:textColor="@color/colordunitednationsblue"
                            android:textSize="@dimen/text_size_16" />


                    <!--</RelativeLayout>-->


                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/relative_progress"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerInParent="true"

                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="22dp"
                        android:gravity="center"
                        android:visibility="gone"

                        >


                        <ImageView
                            android:id="@+id/progressbar_timer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/text_view_progressbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="#00000000" />
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="48dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_error_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="24dp"
                        android:textColor="@color/colorbattleshipgrey"
                        android:textSize="@dimen/text_size_12" />

                    <EditText
                        android:id="@+id/edit_text_otp"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:background="@drawable/border_login_number"
                        android:gravity="center_vertical|center"
                        android:hint="@string/login_text_otp_hint"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size_14" />

                    <TextView
                        android:id="@+id/text_view_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginRight="24dp"
                        android:hint="@string/login_cell_number_hint"
                        android:textColorHint="@color/colorbattleshipgrey"
                        android:textSize="@dimen/text_size_12"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_no_sim"
                    style="@style/CodeFont"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/gradient_background"
                    android:text="@string/confirm_button" />


                <ProgressBar
                    android:id="@+id/progressbar_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:indeterminateDrawable="@drawable/progress"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>

